--- a/MANU_Internship_Research.ipynb
+++ b/MANU_Internship_Research.ipynb
@@ -9391,8 +9391,7 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
